<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:text="New User"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@android:color/holo_orange_dark"
            />



        <EditText
            android:id="@+id/etNombre"
            android:layout_margin="4dp"
            android:layout_width="260dp"
            android:textColorHint="@android:color/holo_orange_dark"
            android:hint="@string/hint_nombre"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etFecha"
            android:layout_margin="4dp"
            android:textColorHint="@android:color/holo_orange_dark"
            android:layout_width="260dp"
            android:hint="@string/hint_fecha_nac"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etPuesto"
            android:layout_margin="4dp"
            android:layout_width="260dp"
            android:hint="@string/puesto"
            android:textColorHint="@android:color/holo_orange_dark"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btSaveEmployee"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_orange_light"/>
        <Button
            android:id="@+id/btCancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_orange_light"/>


    </LinearLayout>

</LinearLayout>